clusters/homelab/apps/immich/server-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server-nodeport
spec:
  type: NodePort
  ports:
    - name: http
      port: 2283
      targetPort: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
